[package]
name = "revenants_brooch"
version = "0.1.2"
edition = "2021"
include = ["/src/*.gql"]

[dependencies]
graphql_client = "0.10.0"
reqwest = {version = "0.11.10", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0.79"
pretty_env_logger = "0.4.0"
tokio = {version = "1.18.4", features = ["full"]}
log = "0.4.16"
webhook = "2.0.0"
chrono = "0.4.19"
